--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,11 @@
 <link rel="canonical" href="https://quicko.firebaseapp.com/">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>QuickO</title>
+<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,700italic,400,700" rel="stylesheet" type="text/css">
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="/css/custom.css">
 
 <!-- TODO add manifest here -->
 <link rel="manifest" href="/manifest.json">
@@ -18,6 +22,23 @@
 <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
 <meta name="msapplication-TileColor" content="#2F3BA2">
 </head>
+<style type="text/css">
+body {
+	padding-bottom: 58px;
+}
+#navbar-bottom {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+#ordering-panel {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-top: 51px;
+}
+#ordering {
+	margin-top: 137px;
+}
+</style>
 <body>
 
 <nav class="navbar navbar-default navbar-nathai navbar-fixed-top" role="navigation">
@@ -53,97 +74,7 @@
 </nav>
 <div class="container-fluid">
 	<!-- Strat Context -->
-	<form id="table-form" action="#" method="post">
-	<div id="ordering-panel" class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xs-6 col-md-4">
-					<div class="form-group">
-						<label for="table">Table No.</label>
-						<select name="table_no" id="table-no" class="form-control input-lg">
-							<option value="">Select Table...</option>
-								<option value="1"> 1 </option>
-								<option value="1"> 2 </option>
-								<option value="1"> 3 </option>
-						</select>
-						<input type="hidden" id="billing-no" name="billing_no" value="<?php echo $table->billing_no; ?>">
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-offset-5 col-md-3">
-					<div class="form-group">
-						<label for="table">Number of Customer:</label>
-						<div class="input-group">
-							<span class="input-group-btn">
-								<button class="bs2 btn btn-default input-lg minus" type="button"><i class="fa fa-minus" aria-hidden="true"></i></button>
-							</span>
-							<input type="text" pattern="[\d\.]*" name="total_customer" id="total-customer" class="form-control input-lg text-center quantity unsigned" inputmode="numeric" readonly="readonly">
-							<span class="input-group-btn">
-								<button class="bs2 btn btn-default input-lg plus" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
-							</span>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12">
-					<ul id="ordering-menu-categories" class="nav nav-pills" role="tablist">
-						<li role="presentation" class="active">
-							<a href="#category-xxx" role="tab" data-toggle="tab"> Category Name
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="ordering" class="tab-content">
-		<!-- category -->
-		<div role="tabpanel" class="tab-pane active" id="category-xxx">
-			<div class="row menu-wrapper">
-				<!-- menu -->
-				<div class="col-xs-6 col-sm-3 col-lg-2">
-					<div class="menu">
-						<a class="menu-picture" href="#"><img src="#"></a>
-						<div class="menu-number">No.</small></div>
-						<div class="menu-title text-ellipsis"></div>
-						<div class="menu-price"></div>
-						<div class="input-group">
-							<span class="input-group-btn">
-								<button class="bs2 btn btn-default minus" type="button"><i class="fa fa-minus" aria-hidden="true"></i></button>
-							</span>
-							<input type="number" name="quantities[]" class="form-control text-center quantity" readonly="readonly" data-id="<?php echo $menu->id; ?>">
-							<span class="input-group-btn">
-								<button class="bs2 btn btn-default plus" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
-							</span>
-						</div>
-						<input type="hidden" name="ids[]" value="<?php echo $menu->id; ?>">
-						<input type="hidden" name="kitchens[]" value="<?php echo $menu->name_kitchen; ?>">
-						<input type="hidden" name="prices[]" value="<?php echo $menu->price; ?>">
-					</div>
-				</div>
-				<!-- /menu -->
-			</div>
-		</div>
-		<!-- /category -->
-	</div>
-
-	<nav id="navbar-bottom" class="navbar navbar-default navbar-fixed-bottom">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xs-6 col-md-10">
-					<div class="checkbox">
-						<label>
-							<input id="with-payment" type="checkbox" name="with_payment" value="Y"> Payment
-						</label>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-2">
-					<button type="submit" id="btn-ordering" class="bs2 btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> <span class="span-text">Order...</span></button>
-				</div>
-			</div>
-		</div><!-- /.container-fluid -->
-	</nav>
+	
 	<!-- End Context -->
 </div>
 
