--- a/app/order.html
+++ b/app/order.html
@@ -123,25 +123,23 @@ body {
 		<div role="tabpanel" class="tab-pane active" id="category-xxx">
 			<div class="row menu-wrapper">
 				<!-- menu -->
-				<div class="col-xs-6 col-sm-3 col-lg-2">
-					<div class="menu">
-						<a class="menu-picture" href="#"><img src="#"></a>
-						<div class="menu-number">No.</small></div>
-						<div class="menu-title text-ellipsis"></div>
-						<div class="menu-price"></div>
-						<div class="input-group">
-							<span class="input-group-btn">
-								<button class="bs2 btn btn-default minus" type="button"><i class="fa fa-minus" aria-hidden="true"></i></button>
-							</span>
-							<input type="number" name="quantities[]" class="form-control text-center quantity" readonly="readonly" data-id="<?php echo $menu->id; ?>">
-							<span class="input-group-btn">
-								<button class="bs2 btn btn-default plus" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
-							</span>
-						</div>
-						<input type="hidden" name="ids[]" value="<?php echo $menu->id; ?>">
-						<input type="hidden" name="kitchens[]" value="<?php echo $menu->name_kitchen; ?>">
-						<input type="hidden" name="prices[]" value="<?php echo $menu->price; ?>">
+				<div class="menu col-xs-4 col-sm-3 col-lg-2">
+					<img src="#" width="100%">
+					<div class="menu-number"></div>
+					<div class="menu-title text-ellipsis"></div>
+					<div class="menu-price"></div>
+					<div class="input-group">
+						<span class="input-group-btn">
+							<button class="bs2 btn btn-default minus" type="button"><i class="fa fa-minus" aria-hidden="true"></i></button>
+						</span>
+						<input type="number" name="quantities[]" class="form-control text-center quantity" readonly="readonly" data-id="<?php echo $menu->id; ?>">
+						<span class="input-group-btn">
+							<button class="bs2 btn btn-default plus" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
+						</span>
 					</div>
+					<input type="hidden" name="ids[]" value="<?php echo $menu->id; ?>">
+					<input type="hidden" name="kitchens[]" value="<?php echo $menu->name_kitchen; ?>">
+					<input type="hidden" name="prices[]" value="<?php echo $menu->price; ?>">
 				</div>
 				<!-- /menu -->
 			</div>
@@ -153,11 +151,7 @@ body {
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-6 col-md-10">
-					<div class="checkbox">
-						<label>
-							<input id="with-payment" type="checkbox" name="with_payment" value="Y"> Payment
-						</label>
-					</div>
+					<span>1,200 THB</span>
 				</div>
 				<div class="col-xs-6 col-md-2">
 					<button type="submit" id="btn-ordering" class="bs2 btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> <span class="span-text">Order...</span></button>
@@ -172,6 +166,41 @@ body {
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="/js/bootstrap.js"></script>
 <script src="/js/app.js" async></script>
+<script type="text/javascript">
+	var menus = [{
+		'title':'Caffee Mocha',
+		'price':1000,
+		'image':'https://firebasestorage.googleapis.com/v0/b/thevagabond-ef4b2.appspot.com/o/menus%2Fcaffee-mocha_tcm78-10981_w1024_n.jpg?alt=media&token=9bd675ac-51df-4599-af85-fb66a7f33559'
+	},{
+		'title':'Caramel Macchiato',
+		'price':2000,
+		'image':'https://firebasestorage.googleapis.com/v0/b/thevagabond-ef4b2.appspot.com/o/menus%2Fcaramel-macchiato-thumb_tcm78-11384_w1024_n.jpg?alt=media&token=660c23b9-47cd-435e-8844-881d45c9b8ed'
+	}];
 
+	var temp = $('.menu:first').clone();
+	$.each(menus, function(index, value) {
+		var menu = temp.html();
+		$('#ordering .menu-wrapper').append('<div class="menu col-xs-4 col-sm-3 col-lg-2">'+menu+'</div>');
+		$('#ordering .menu-wrapper').find('div.menu-title:last').text(value.title);
+		$('#ordering .menu-wrapper').find('div.menu-price:last').text(value.price);
+		$('#ordering .menu-wrapper').find('img:last').prop('src', value.image);
+		console.log(value);
+	});
+
+	// plus/minus item button
+	$(".minus").click(function(){
+		var e_order = $(this).parent().parent();
+		var e_item = e_order.find(".quantity");
+		var items = e_item.val() === "" ? 0 : parseInt(e_item.val(), 10);
+		e_item.val(items === 1 ? "" : items - 1 );
+	});
+	$(".plus").click(function(){
+		var e_order = $(this).parent().parent();
+		var e_item = e_order.find(".quantity");
+		var items = e_item.val() === "" ? 0 : parseInt(e_item.val(), 10);
+		e_item.val(items === -1 ? "" : items + 1 );
+	});
+
+</script>
 </body>
 </html>
