Update <title> HTML

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="canonical" href="https://quicko.firebaseapp.com/">
+<link rel="canonical" href="https://thevagabond-ef4b2.firebaseapp.com/">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>QuickO</title>
+<title>QuickO: Firebase AppFest Bangkok</title>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
 <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,700italic,400,700" rel="stylesheet" type="text/css">
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
