--- a/app/order.html
+++ b/app/order.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="canonical" href="https://quicko.firebaseapp.com/">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>QuickO</title>
+<title>QuickO: Firebase AppFest Bangkok</title>
 <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,700italic,400,700" rel="stylesheet" type="text/css">
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
